--- a/css/styles.css
+++ b/css/styles.css
@@ -465,7 +465,7 @@ body {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  transition-property: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-coslink-link:hover,
